# Hire-S

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  start-ui.sh  start.sh
Reports/: HireX_Domain_Selection_Document.docx  api_endpoint_integration_and_concepts_guide.md  batches_rejected_pool_freshness_and_intelligence_modules.md  business_impact_analysis.docx  business_impact_analysis.md  candidate_distribution_and_validator_input_analysis.md  candidate_pool_freshness_and_scraping_case_study_report.md  current_process_flow_diagram.docx  current_process_flow_diagram.md  dependency_requirements_setup_report.md  domain_selection_document.docx  domain_selection_document.md  excel_intake_and_validator_process_guide.md  excel_intake_mvp_execution_report.md  freshness_cycle_workbook_generation_report.md  hirex_1000_candidate_dummy_data_generation_report.md  hirex_candidate_database_tables_and_columns.txt  hirex_candidate_master_with_extracted_resumes.xlsx  hirex_workflow_and_architecture_diagrams.docx  hirex_workflow_and_architecture_diagrams.md  hr_admin_dashboard_and_nextjs_execution_report.md  jd_based_candidate_fetching_execution_report.md  lead_end_to_end_workflow_guide.md  master_project_reverse_engineering_knowledge_documentation.md  phase_1_foundation_execution_report.json  phase_1_foundation_execution_report.md  phase_2_pre_screen_validator_execution_report.json  phase_2_pre_screen_validator_execution_report.md  problem_statement_document.docx  problem_statement_document.md  resume_batch_excel_import_report.md  workbook_quality_audit_report.md  (+3 more)
(+371 files in other folders)
