[project]
name = "hirex"
version = "0.1.0"
description = "HireX Phase 1 foundation for candidate registration, profiles, resumes, jobs, and applications."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "boto3>=1.34.0",
    "email-validator>=2.1.0",
    "fastapi>=0.111.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "rapidfuzz>=3.9.0",
    "redis>=5.0.0",
    "scikit-learn>=1.4.0",
    "spacy>=3.7.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
